--- a/01线代/01.md
+++ b/01线代/01.md
@@ -18,23 +18,28 @@
 
 ![alt text](image-4.png)
 
+特征值
+![alt text](image-5.png)
 
 
+![alt text](image-6.png)
 
 
+![alt text](image-7.png)
 
+度量空间
 
+![alt text](image-8.png)
 
+![alt text](image-9.png)
 
+相似变换和合同变换
+相似变换是指通过可逆线性变换将一个矩阵转换为另一个矩阵的过程。两个矩阵相似意味着它们具有相同的特征值和特征向量结构。
+合同变换是指通过正交变换将一个矩阵转换为另一个矩阵的过程。两个矩阵合同意味着它们具有相同的二次型结构。
 
+![alt text](image-10.png)
 
-
-
-
-
-
-
-
+![alt text](image-11.png)
 
 
 
