--- a/01线代/02.md
+++ b/01线代/02.md
@@ -1,5 +1,45 @@
 
 
+![alt text](image-12.png)
+
+qr分解对矩阵要求是列满秩
+![alt text](image-13.png)
+
+SVD没要求
+
+
+
+
+![alt text](image-14.png)
+
+![alt text](image-15.png)
+看成变元和函数
+![alt text](image-16.png)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
